Warning and reformat