@@ -1,14 +1,5 @@
 package edu.boardgames.collections.explorer;
 
-import edu.boardgames.collections.explorer.domain.BoardGame;
-import edu.boardgames.collections.explorer.domain.BoardGameCollection;
-import edu.boardgames.collections.explorer.domain.Copy;
-import edu.boardgames.collections.explorer.domain.GeekBuddy;
-import edu.boardgames.collections.explorer.domain.PlayerCount;
-import edu.boardgames.collections.explorer.infrastructure.bgg.BggInit;
-import org.apache.commons.lang3.ObjectUtils;
-import org.apache.commons.lang3.StringUtils;
-
 import java.lang.System.Logger.Level;
 import java.util.Arrays;
 import java.util.List;
@@ -23,6 +14,16 @@ import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
+
+import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
+
+import edu.boardgames.collections.explorer.domain.BoardGame;
+import edu.boardgames.collections.explorer.domain.BoardGameCollection;
+import edu.boardgames.collections.explorer.domain.Copy;
+import edu.boardgames.collections.explorer.domain.GeekBuddy;
+import edu.boardgames.collections.explorer.domain.PlayerCount;
+import edu.boardgames.collections.explorer.infrastructure.bgg.BggInit;
 
 @Path("/shelves")
 public class ShelvesResource {
@@ -53,7 +54,7 @@ public class ShelvesResource {
 		if (includeRated != null) {
 			List<BoardGame> rated = buddy.ratedCollection(includeRated);
 			LOGGER.log(Level.INFO, "Collection fetched: {0} rated {1,number,integer} boardgames {1,number,integer} or more.", geekbuddy, rated.size(), includeRated);
-			wantToPlay = Stream.concat(wantToPlay.stream(), rated.stream()).collect(Collectors.toList());
+			wantToPlay = Stream.concat(wantToPlay.stream(), rated.stream()).toList();
 		}
 
 		String copies = displayMultiLineString(
@@ -71,8 +72,8 @@ public class ShelvesResource {
 		LOGGER.log(Level.INFO, "{0} wants to replay best with {1,number,integer} games minimally rated {2,number,integer}", geekbuddy, bestWith, minimallyRated);
 
 		GeekBuddy buddy = BggInit.get().geekBuddies().one(geekbuddy);
-			List<BoardGame> rated = buddy.ratedCollection(minimallyRated);
-			LOGGER.log(Level.INFO, "Collection fetched: {0} rated {1,number,integer} boardgames {1,number,integer} or more.", geekbuddy, rated.size(), minimallyRated);
+		List<BoardGame> rated = buddy.ratedCollection(minimallyRated);
+		LOGGER.log(Level.INFO, "Collection fetched: {0} rated {1,number,integer} boardgames {1,number,integer} or more.", geekbuddy, rated.size(), minimallyRated);
 
 		String copies = rated.stream().map(BoardGameRender::playInfo).collect(Collectors.joining("\n"));
 		return String.format("Show replay options for %s's want-to-play best with %d games rated at least %d%n%n%s", geekbuddy, bestWith, minimallyRated, copies);
